--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,10 @@
 
     <string name="app_name">MAC tracker</string>
     <string name="action_settings">Settings</string>
+    <string name="start_location_service">Start location service</string>
+	<string name="stop_location_service">Stop location service</string>
+    
+    
 
     <string-array name="wifi_states">
         <item>Disabling</item>
