--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="start_location_service">Start location service</string>
 	<string name="stop_location_service">Stop location service</string>
+	<string name="location_Service_State_Name">Location Service</string>
+	<string name="enabled">Enabled</string>
+	<string name="disabled">Disabled</string>
+	<string name="latitude">Latitude</string>
+	<string name="longitude">Longitude</string>
+	<string name="accuracy">Accuracy</string>
+	
     
     
 
