--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,16 +4,16 @@
     <string name="app_name">MAC tracker</string>
     <string name="action_settings">Settings</string>
     <string name="start_location_service">Start location service</string>
-	<string name="stop_location_service">Stop location service</string>
-	<string name="location_Service_State_Name">Location Service</string>
-	<string name="enabled">Enabled</string>
-	<string name="disabled">Disabled</string>
-	<string name="latitude">Latitude</string>
-	<string name="longitude">Longitude</string>
-	<string name="accuracy">Accuracy</string>
-	
-    
-    
+    <string name="stop_location_service">Stop location service</string>
+    <string name="location_Service_State_Name">Location Service</string>
+    <string name="enabled">Enabled</string>
+    <string name="disabled">Disabled</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="accuracy">Accuracy</string>
+    <string name="seconds_since_update">Seconds since update:</string>
+    <string name="activity_map_title">Map</string>
+    <string name="activity_settings_title">Settings</string>
 
     <string-array name="wifi_states">
         <item>Disabling</item>
@@ -23,4 +23,4 @@
         <item>Unknown</item>
     </string-array>
 
-</resources>		
+</resources>
